--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<html><head></head><body data-new-gr-c-s-check-loaded="14.998.0" data-gr-ext-installed=""><pre style="word-wrap: break-word; white-space: pre-wrap;">{"website":"learnalanguage.tk","api":"learnalanguageapi.tk"}</pre></body></html>
+<html><head></head><body><pre style="word-wrap: break-word; white-space: pre-wrap;">{"website":"learnalanguage.tk","api":"learnalanguageapi.tk"}</pre></body></html>
